# ramus

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  CustomGenreImportExample.txt  IMPLEMENTATION_PLAN.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  about.toml  deny.toml
.cargo/: config.toml  macos-linker-wrapper.sh
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/sidestore/: source.json
.github/workflows/: ci.yml  release-android.yml  release.yml  sidestore-sync.yml
config/: deny.toml
licenses/: NOTICE.md  THIRD_PARTY_LICENSES.md
plugins/tauri-plugin-ramus-ios-bridge/: .gitignore  Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ramus-ios-bridge/android/: build.gradle.kts
plugins/tauri-plugin-ramus-ios-bridge/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-ramus-ios-bridge/android/src/main/java/com/ramus/iosbridge/: ColorizedMediaNotificationProvider.kt  LibmpvSimplePlayer.kt  MpvBridgePlugin.kt  MpvForegroundService.kt
plugins/tauri-plugin-ramus-ios-bridge/ios/: Package.swift  README.md
plugins/tauri-plugin-ramus-ios-bridge/ios/Sources/: KeychainBridge.swift  MpvBridgePlugin.swift  MpvController.swift  NowPlayingBridge.swift
plugins/tauri-plugin-ramus-ios-bridge/permissions/: default.toml
plugins/tauri-plugin-ramus-ios-bridge/permissions/autogenerated/: reference.md
plugins/tauri-plugin-ramus-ios-bridge/permissions/schemas/: schema.json
plugins/tauri-plugin-ramus-ios-bridge/src/: desktop.rs  lib.rs  mobile.rs  models.rs
ramus-core/: Cargo.toml
ramus-core/src/: lib.rs  models.rs  settings.rs  util.rs
ramus-core/src/cache/: collection.rs  colors.rs  db.rs  downloads.rs  genre.rs  image_cache.rs  mod.rs  prune.rs  search_queries.rs  sync.rs  sync_state.rs  upsert.rs
ramus-core/src/genre/: mapper.rs  mod.rs  node.rs  parser.rs
ramus-core/src/playback/: download_cache.rs  lyrics.rs  media_keys.rs  mod.rs  mpv.rs  player.rs  session.rs  spectrum.rs  transcode.rs  waveform.rs
ramus-core/src/plex/: auth.rs  client.rs  connection.rs  mod.rs  models.rs  token_store.rs
ramus-core/src/search/: engine.rs  parser.rs
ramus-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
ramus-tauri/capabilities/: default.json  desktop.json
ramus-tauri/data/: open.json
ramus-tauri/icons/: icon.icns
ramus-tauri/metainfo/: com.ramus.app.metainfo.xml
ramus-tauri/src/: auto_sync.rs  events.rs  ios_backup.rs  keychain_ios.rs  lib.rs  main.rs  media_controls.rs  media_controls_android.rs  media_controls_ios.rs  mpv_android.rs  mpv_controller.rs  mpv_ffi.rs  mpv_ios.rs  mpv_mobile.rs  prefetch.rs  session_reporter.rs  spectrum_analyzer.rs  stall_watchdog.rs  state.rs  stub_player.rs
ramus-tauri/src/commands/: acknowledgements.rs  auth.rs  downloads.rs  library.rs  mod.rs  platform.rs  playback.rs  search.rs  settings.rs  spectrum.rs  sync.rs
scripts/: build-ios-ipa-local.sh  bundle-linux-libmpv.py  bundle-macos-libmpv.py  codesign-macos-main-binary.sh  generate-third-party-licenses.py  regen-ios-project.sh  strip-appimage.py
sidestore/: source.json
swift-project/RamusMusicCore/: Package.resolved  Package.swift
swift-project/RamusMusicCore/Sources/Cache/: CacheDatabase+LibraryQueries.swift  CacheDatabase+SearchQueries.swift  CacheDatabase+SyncWrites.swift  CacheDatabase+UserActions.swift  CacheDatabase.swift  SyncEngine.swift  SyncPhaseDisplay.swift
swift-project/ramus/: ContentView.swift  ramus.entitlements  ramusApp.swift
swift-project/ramus/Models/: SuggestedAlbumData.swift
swift-project/ramus/Resources/: open.json
swift-project/ramus/Utilities/: CompatGlass.swift  DynamicAccentKey.swift  ForceTouch.swift  HoverTilt.swift  SuggestedAlbumTaglines.swift  TimeFormatting.swift  UserDefaultsKeys.swift  VibrantColor.swift  WindowDragArea.swift
swift-project/ramus/ViewModels/: LibraryViewModel.swift  OnboardingViewModel.swift  PlaybackViewModel.swift  SearchViewModel.swift
swift-project/scripts/: build_open_genres.py  genre_overrides.json
tools/genre-editor/: README.md  app.js  index.html  server.py  styles.css
ui/: .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/scripts/: prettier-hook.sh
ui/src/: App.tsx  main.ts  main.tsx  styles.css
ui/src/components/: AcknowledgementsPanel.tsx  AlbumDetailView.tsx  AlbumGridView.tsx  BookmarkEditor.tsx  BookmarkPicker.tsx  BookmarkSaveDialog.tsx  BreadcrumbBar.tsx  BreadcrumbDebugPanel.tsx  CacheStatsRow.tsx  ChipAutocompleteInput.tsx  ColorDebugPanel.tsx  DetailColumn.tsx  DownloadMenuItems.tsx  DownloadsPanel.tsx  EqualizerPanel.tsx  FilterDropdown.tsx  FilterPanelMenu.tsx  FlowLayout.tsx  FocusNowPlayingView.tsx  FocusVisualizer.tsx  FocusVisualizerDebugPanel.tsx  GenreDebugPanel.tsx  GenreTreeView.tsx  HelperText.tsx  Icons.tsx  LibrarySettingsPanel.tsx  LyricsOverlay.tsx  LyricsView.tsx  MarqueeText.tsx  NowPlayingView.tsx  QueueView.tsx  SavedSearchEditor.tsx  SavedSearchPicker.tsx  SearchOverlay.tsx  ShuffleFavsButton.tsx  SidebarView.tsx  SuggestionView.tsx  TabBar.tsx  ThreeColumnLayout.tsx  Toast.tsx  (+5 more)
ui/src/lib/: accent.ts  backHandler.ts  bookmark.ts  commands.ts  countryFlag.ts  filterDescribe.ts  filterSuggestions.ts  filters.ts  format.ts  hdr.ts  savedSearch.ts  types.ts  useAppKeyboard.ts  useArtUrl.ts  useConnectionStatus.ts  useFullscreenSync.ts  useIsMobile.ts  useNowPlayingActions.ts  usePlaybackEvents.ts  useQueueAlbum.ts  useQueuePanel.ts  useWindowTitle.ts  vibrantColor.ts
ui/src/mobile/: MobileAlbumCard.tsx  MobileAlbumDetail.tsx  MobileAlbumGrid.tsx  MobileApp.tsx  MobileArtistList.tsx  MobileDebugPanel.tsx  MobileFilterPanel.tsx  MobileGenreTree.tsx  MobileNowPlaying.tsx  MobileSearch.tsx  MobileSettingsRow.tsx  MobileSuggestion.tsx  MobileToolbar.tsx  SavedSearchModal.tsx  useEdgeSwipeBack.ts
ui/src/stores/: connectionStore.ts  downloadsStore.ts  focusVizDebugStore.ts  libraryStore.ts  playbackStore.ts  settingsStore.ts  visualizerDebugStore.ts
(+61 files in other folders)
