[workspace]
members = ["ramus-core", "ramus-tauri", "plugins/tauri-plugin-ramus-ios-bridge"]
resolver = "2"

# Single source of truth for crate + app metadata. Bumping `version`
# here propagates through both member crates, tauri.conf.json (which
# reads from ramus-tauri/Cargo.toml when its own `version` field is
# omitted), and the User-Agent string in ramus-core via
# env!("CARGO_PKG_VERSION"). ui/package.json is marked `"private": true`
# and deliberately carries no version field.
[workspace.package]
version = "0.9.8"
edition = "2021"
license = "MIT"
authors = ["raspberry1337"]
repository = "https://github.com/1337raspberry/ramus"

# Optimise the CPU-heavy spectrum-analyser deps even in debug builds.
# Symphonia, rustfft and realfft are pure-Rust numerical code that runs
# at roughly 25x real-time at `opt-level = 0` but 300x+ at
# `opt-level = 3`. Leaving them unoptimised in `cargo tauri dev` makes
# a 5-minute track take ~14s to analyse on first play instead of ~1s.
#
# Local crates stay at `opt-level = 0` (the dev default) so incremental
# rebuilds remain fast — only the dependencies get fully optimised.
# Compile cost is paid once per clean build and cached in `target/`.
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-core]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
[profile.dev.package.symphonia-bundle-flac]
opt-level = 3
[profile.dev.package.symphonia-codec-aac]
opt-level = 3
[profile.dev.package.symphonia-codec-alac]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
[profile.dev.package.symphonia-format-isomp4]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.symphonia-format-riff]
opt-level = 3
[profile.dev.package.symphonia-metadata]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.num-complex]
opt-level = 3
[profile.dev.package.num-traits]
opt-level = 3
