[package]
name = "ramus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2"
thiserror = "2"
log = "0.4"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
sha2 = "0.10"
directories = "5"
rand = "0.8"
fuzzy-matcher = "0.3"
strsim = "0.11"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
wiremock = "0.6"
tempfile = "3"
