[package]
name = "ramus-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Cargo's default target is a binary on desktop (src/main.rs). Tauri mobile
# builds link the crate as a static library into the generated Xcode project,
# so the lib target needs to produce `libapp.a`. "rlib" is kept so local unit
# tests and downstream crates can still depend on the library normally.
[lib]
name = "ramus_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ramus-core = { path = "../ramus-core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
url = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
rand = "0.8"
# Cross-platform URL / file opener. On iOS routes through
# `UIApplication.open(_:options:completionHandler:)`; on desktop
# it delegates to `open`/`xdg-open`/`cmd start`. The standalone `open`
# crate doesn't ship an iOS backend and silently no-ops there, which
# broke the OAuth sign-in flow on the simulator.
tauri-plugin-opener = "2"
# Pure-Rust audio decoder. Feeds decoded f32 samples into ramus-core's
# spectrum analyser so the focus visualiser gets real per-track FFT
# data. No libav linkage — cross-platform without native deps.
symphonia = { version = "0.5", default-features = false, features = [
    "flac",
    "mp3",
    "aac",
    "alac",
    "isomp4",
    "vorbis",
    "ogg",
    "wav",
    "pcm",
] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
# libmpv is loaded at runtime via `libloading` on desktop so the app
# compiles on any platform without headers or import libs. iOS forbids
# `dlopen` of arbitrary dylibs — the iOS target uses a different mpv
# backend (see Phase 2 of the iOS plan), so libloading is desktop-only.
libloading = "0.8"
# souvlaki wraps MPRIS2 / SMTC / MPRemoteCommandCenter for desktop.
# iOS replaces it with a Swift-plugin path to MPNowPlayingInfoCenter.
souvlaki = "0.8"
# Window state persistence is meaningless on iOS (no resizable window).
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Opts the borderless NSWindow into native fullscreen
# (NSWindowCollectionBehaviorFullScreenPrimary). Without this, macOS
# refuses to let a window with `decorations: false` enter fullscreen —
# the green traffic light is dead and View > Enter Full Screen is
# disabled. objc2 is already a transitive dependency of Tauri, so this
# reuses the same version.
#
# The `cfg(target_os = "macos")` predicate is already false for
# `target_os = "ios"`, so this does not leak into the iOS build.
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
