[package]
name = "ramus-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Cargo's default target is a binary on desktop (src/main.rs). Tauri mobile
# builds link the crate as a static library into the generated Xcode project,
# so the lib target needs to produce `libapp.a` — Xcode resolves transitive
# xcframework deps (MPVKit → libmpv) at the final app-link step. "rlib" is
# kept so local unit tests and downstream crates can still depend on the
# library normally. `cdylib` is intentionally *not* included: it would
# force cargo to link the dylib itself, which then fails with unresolved
# mpv symbols because MPVKit's xcframeworks are only visible to Xcode.
[lib]
name = "ramus_tauri"
crate-type = ["staticlib", "rlib"]

[dependencies]
ramus-core = { path = "../ramus-core" }
# Tauri mobile plugin that owns the iOS mpv handle (via MPVKit), the
# AVAudioSession, and MPNowPlayingInfoCenter / MPRemoteCommandCenter.
# Desktop builds get a no-op stub (see plugins/.../src/desktop.rs) so
# this dep is unconditional.
tauri-plugin-ramus-ios-bridge = { path = "../plugins/tauri-plugin-ramus-ios-bridge" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
url = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
postcard = { version = "1", features = ["alloc"] }
# Cross-platform URL / file opener. On iOS routes through
# `UIApplication.open(_:options:completionHandler:)`; on desktop
# it delegates to `open`/`xdg-open`/`cmd start`. The standalone `open`
# crate doesn't ship an iOS backend and silently no-ops there, which
# broke the OAuth sign-in flow on the simulator.
tauri-plugin-opener = "2"
# Pure-Rust audio decoder. Feeds decoded f32 samples into ramus-core's
# spectrum analyser so the focus visualiser gets real per-track FFT
# data. No libav linkage — cross-platform without native deps.
symphonia = { version = "0.5", default-features = false, features = [
    "flac",
    "mp3",
    "aac",
    "alac",
    "isomp4",
    "vorbis",
    "ogg",
    "wav",
    "pcm",
] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
# libmpv is loaded at runtime via `libloading` on desktop so the app
# compiles on any platform without headers or import libs. iOS forbids
# `dlopen` of arbitrary dylibs — the iOS target uses a different mpv
# backend (see Phase 2 of the iOS plan), so libloading is desktop-only.
libloading = "0.8"
# souvlaki wraps MPRIS2 / SMTC / MPRemoteCommandCenter for desktop.
# iOS replaces it with a Swift-plugin path to MPNowPlayingInfoCenter.
souvlaki = "0.8"
# Window state persistence is meaningless on iOS (no resizable window).
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Opts the borderless NSWindow into native fullscreen
# (NSWindowCollectionBehaviorFullScreenPrimary). Without this, macOS
# refuses to let a window with `decorations: false` enter fullscreen —
# the green traffic light is dead and View > Enter Full Screen is
# disabled. objc2 is already a transitive dependency of Tauri, so this
# reuses the same version.
#
# The `cfg(target_os = "macos")` predicate is already false for
# `target_os = "ios"`, so this does not leak into the iOS build.
objc2 = "0.6"

[target.'cfg(target_os = "ios")'.dependencies]
# Force the UIWindow to fill the screen after Tauri creates it at the
# 1200x800 size baked into `tauri.conf.json`. tao's iOS window honors
# that inner_size at creation time and `set_inner_size` is a no-op on
# iOS, so we reach into the view controller's window via objc and
# setFrame: [UIScreen mainScreen].bounds ourselves.
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
# Used to defer the window resize until after tauri's setup runloop has
# finished wiring up the view hierarchy. Synchronous setFrame leaves
# the WKWebView scroll-view's cached viewport stale — the gap only
# disappears once UIKit fires a layout event (keyboard focus, rotation).
dispatch2 = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
